--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Agency for Care Effectiveness
 title-abbreviated: ACE-HTA
 description: >- # this means to ignore newlines until "baseurl:"
   Description
-url: "https://isomerpages.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 markdown: kramdown
@@ -39,7 +39,7 @@ custom_css_path: "/misc/custom.css"
 custom_print_css_path: "/assets/css/print.css"
 
 
-baseurl: /isomerpages-ace-hta
+baseurl: ""
 collections:
   who-we-are:
     output: true
